[package]
name = "stm32f0x"
version = "0.1.0"
authors = ["Viktor Fällman <vikfll-0@student.ltu.se>"]
keywords = ["arm", "cortex-m", "template"]
categories = ["embedded", "no-std"]

[profile.release]
lto = true
debug = true

[dependencies.cortex-m-rt]
optional = true
version = "0.3.0"
features = ["abort-on-panic"]

[dependencies]
cortex-m = "0.4.1"
bare-metal = "0.1.3"
vcell = "0.1.0"

[features]
rt = ["cortex-m-rt"]